graylog/base/service-graylog-dn.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-datanode
spec:
  selector:
    app: graylog-datanode
  ports:
    - name: http
      port: 9000
      targetPort: http
