graylog/base/route-graylog.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: graylog
spec:
  to:
    kind: Service
    name: graylog
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
